--- a/sapui5walkthrough/webapp/test/unit/unitTests.qunit.html
+++ b/sapui5walkthrough/webapp/test/unit/unitTests.qunit.html
@@ -11,8 +11,10 @@
             src="../../resources/sap-ui-core.js"
             data-sap-ui-resourceroots='{
 			"mindsetcurtiskettler.sapui5walkthrough./sapui5walkthrough": "../../"
-		}'
-        ></script>
+		    }'
+            data-sap-ui-async="true">
+        </script>
+        </script>
 
         <link
             rel="stylesheet"
@@ -23,6 +25,8 @@
         <script src="../../resources/sap/ui/thirdparty/qunit-2.js"></script>
         <script src="../../resources/sap/ui/qunit/qunit-junit.js"></script>
         <script src="../../resources/sap/ui/qunit/qunit-coverage.js"></script>
+        <script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/sinon.js"></script>
+	    <script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/sinon-qunit.js"></script>
 
         <script src="unitTests.qunit.js"></script>
     </head>
